--- a/src/Components/Destination/Destination.css
+++ b/src/Components/Destination/Destination.css
@@ -1,13 +1,29 @@
+.destination-container {
+  background-image: url(https://lavella.hellodigi.ru/img/home4.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* background-position: center top; */
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  visibility: inherit;
+  /* z-index: 20; */
+}
+
 .country-img {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   position: relative;
   border-radius: 50%;
   top: -2em;
   left: 1.2em;
 }
 .destination-card {
+  border-radius: 20px;
   box-shadow: 0px 0px 7px 0px rgba(128, 128, 128, 0.5);
+}
+.place-img {
+  border-radius: 20px 20px 0 0;
 }
 .body-card {
   position: relative;
