--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -16,3 +16,7 @@
 .media-icon:hover {
   box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.04), 0 2px 4px rgba(0, 0, 0, 0.25);
 }
+.register-container {
+  margin-top: 50px;
+  margin-bottom: 150px;
+}
