--- a/src/Components/Shared/Login/Login.css
+++ b/src/Components/Shared/Login/Login.css
@@ -17,14 +17,8 @@
 .media-icon:hover {
   box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.04), 0 2px 4px rgba(0, 0, 0, 0.25);
 }
-/* .loging-container {
-  background-image: url(https://freellustrustrations.s3.us-east-2.amazonaws.com/free-images/thumbimg_9855217thumbejpg.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center top;
-  width: 100%;
-  height: 100vh;
-  opacity: 1;
-  visibility: inherit;
-  z-index: 20;
-} */
+.login-page {
+
+  margin-top: 50px;
+  margin-bottom: 150px;
+}
